--- a/index.html
+++ b/index.html
@@ -1961,11 +1961,7 @@
                   incertidumbre, analizar riesgos y oportunidades y evaluar
                   diferentes escenarios.
                 </p>
-                <a
-                  href="https://wa.me/1535742787?text=Hola%20buenas,%20quiero%20saber%20más%20acerca%20del%20servicio%20que%20ofrecen"
-                  target="_blank"
-                  class="inline-block rounded-md border border-transparent bg-secondary px-7 py-3 text-base font-medium text-white transition hover:bg-[#0BB489]"
-                >
+                <a href="https://api.whatsapp.com/send?phone=1535742787&text=Hola%20buenas,%20quiero%20saber%20más%20acerca%20del%20servicio%20que%20ofrecen" target="_blank" class="inline-block rounded-md border border-transparent bg-secondary px-7 py-3 text-base font-medium text-white transition hover:bg-[#0BB489]">
                   ¡Hablemos!
                 </a>
               </div>
