update whatsapp button

--- a/index.html
+++ b/index.html
@@ -1961,13 +1961,16 @@
                   incertidumbre, analizar riesgos y oportunidades y evaluar
                   diferentes escenarios.
                 </p>
-                <a
-                  href="https://wa.me/1535742787?text=Hola%20buenas,%20quiero%20saber%20más%20acerca%20del%20servicio%20que%20ofrecen"
-                  target="_blank"
+                <button
                   class="inline-block rounded-md border border-transparent bg-secondary px-7 py-3 text-base font-medium text-white transition hover:bg-[#0BB489]"
                 >
-                  ¡Hablemos!
-                </a>
+                  <a
+                    href="https://wa.me/1535742787?text=Hola%20buenas,%20quiero%20saber%20más%20acerca%20del%20servicio%20que%20ofrecen"
+                    target="_blank"
+                  >
+                    ¡Hablemos!
+                  </a>
+                </button>
               </div>
             </div>
           </div>
