--- a/index.html
+++ b/index.html
@@ -1971,6 +1971,13 @@
                     ¡Hablemos!
                   </a>
                 </button>
+                <a
+                    href="https://wa.me/1535742787?text=Hola%20buenas,%20quiero%20saber%20más%20acerca%20del%20servicio%20que%20ofrecen"
+                    target="_blank"
+                    style="font-weight: bold"
+                  >
+                    Whatsapp
+                  </a>
               </div>
             </div>
           </div>
