--- a/index.html
+++ b/index.html
@@ -1960,6 +1960,13 @@
                   En consecuencia, monitorear la performance, disminuir la
                   incertidumbre, analizar riesgos y oportunidades y evaluar
                   diferentes escenarios.
+                  <a
+                  href="https://wa.me/1535742787?text=Hola%20buenas,%20quiero%20saber%20más%20acerca%20del%20servicio%20que%20ofrecen"
+                  target="_blank"
+                  style="font-weight: bold"
+                >
+                  Whatsapp
+                </a>
                 </p>
                 <button
                   class="inline-block rounded-md border border-transparent bg-secondary px-7 py-3 text-base font-medium text-white transition hover:bg-[#0BB489]"
@@ -1979,8 +1986,22 @@
                     Whatsapp
                   </a>
               </div>
+              <a
+              href="https://wa.me/1535742787?text=Hola%20buenas,%20quiero%20saber%20más%20acerca%20del%20servicio%20que%20ofrecen"
+              target="_blank"
+              style="font-weight: bold"
+            >
+              Whatsapp
+            </a>
             </div>
           </div>
+          <a
+          href="https://wa.me/1535742787?text=Hola%20buenas,%20quiero%20saber%20más%20acerca%20del%20servicio%20que%20ofrecen"
+          target="_blank"
+          style="font-weight: bold"
+        >
+          Whatsapp
+        </a>
         </div>
       </div>
       <div>
@@ -2048,6 +2069,13 @@
           </svg>
         </span>
       </div>
+      <a
+      href="https://wa.me/1535742787?text=Hola%20buenas,%20quiero%20saber%20más%20acerca%20del%20servicio%20que%20ofrecen"
+      target="_blank"
+      style="font-weight: bold"
+    >
+      Whatsapp
+    </a>
     </section>
     <!-- ====== CTA Section End -->
 
