--- a/index.html
+++ b/index.html
@@ -1960,48 +1960,13 @@
                   En consecuencia, monitorear la performance, disminuir la
                   incertidumbre, analizar riesgos y oportunidades y evaluar
                   diferentes escenarios.
-                  <a
-                  href="https://wa.me/1535742787?text=Hola%20buenas,%20quiero%20saber%20más%20acerca%20del%20servicio%20que%20ofrecen"
-                  target="_blank"
-                  style="font-weight: bold"
-                >
-                  Whatsapp
-                </a>
                 </p>
-                <button
-                  class="inline-block rounded-md border border-transparent bg-secondary px-7 py-3 text-base font-medium text-white transition hover:bg-[#0BB489]"
-                >
-                  <a
-                    href="https://wa.me/1535742787?text=Hola%20buenas,%20quiero%20saber%20más%20acerca%20del%20servicio%20que%20ofrecen"
-                    target="_blank"
-                  >
-                    ¡Hablemos!
-                  </a>
+                <button id="whatsappButton" class="inline-block rounded-md border border-transparent bg-secondary px-7 py-3 text-base font-medium text-white transition hover:bg-[#0BB489]">
+                  ¡Hablemos!
                 </button>
-                <a
-                    href="https://wa.me/1535742787?text=Hola%20buenas,%20quiero%20saber%20más%20acerca%20del%20servicio%20que%20ofrecen"
-                    target="_blank"
-                    style="font-weight: bold"
-                  >
-                    Whatsapp
-                  </a>
               </div>
-              <a
-              href="https://wa.me/1535742787?text=Hola%20buenas,%20quiero%20saber%20más%20acerca%20del%20servicio%20que%20ofrecen"
-              target="_blank"
-              style="font-weight: bold"
-            >
-              Whatsapp
-            </a>
             </div>
           </div>
-          <a
-          href="https://wa.me/1535742787?text=Hola%20buenas,%20quiero%20saber%20más%20acerca%20del%20servicio%20que%20ofrecen"
-          target="_blank"
-          style="font-weight: bold"
-        >
-          Whatsapp
-        </a>
         </div>
       </div>
       <div>
@@ -2069,13 +2034,6 @@
           </svg>
         </span>
       </div>
-      <a
-      href="https://wa.me/1535742787?text=Hola%20buenas,%20quiero%20saber%20más%20acerca%20del%20servicio%20que%20ofrecen"
-      target="_blank"
-      style="font-weight: bold"
-    >
-      Whatsapp
-    </a>
     </section>
     <!-- ====== CTA Section End -->
 
@@ -2675,7 +2633,6 @@
                 </p>
               </div>
             </div>
-
             <div class="mb-12 flex lg:mb-[70px]">
               <div
                 class="mr-4 flex h-[50px] w-full max-w-[50px] items-center justify-center rounded-xl bg-gradient-to-r from-primary to-blue-500 text-white sm:mr-6 sm:h-[60px] sm:max-w-[60px]"
@@ -4755,6 +4712,11 @@
             spaceBetween: 30,
           },
         },
+      });
+    </script>
+    <script>
+      document.getElementById("whatsappButton").addEventListener("click", function() {
+        window.location.href = "https://wa.me/1535742787?text=Hola%20buenas,%20quiero%20saber%20más%20acerca%20del%20servicio%20que%20ofrecen";
       });
     </script>
   </body>
