--- a/index.html
+++ b/index.html
@@ -1961,8 +1961,15 @@
                   incertidumbre, analizar riesgos y oportunidades y evaluar
                   diferentes escenarios.
                 </p>
-                <button id="whatsappButton" class="inline-block rounded-md border border-transparent bg-secondary px-7 py-3 text-base font-medium text-white transition hover:bg-[#0BB489]">
-                  ¡Hablemos!
+                <button
+                  class="inline-block rounded-md border border-transparent bg-secondary px-7 py-3 text-base font-medium text-white transition hover:bg-[#0BB489]"
+                >
+                  <a
+                    href="https://wa.me/1535742787?text=Hola%20buenas,%20quiero%20saber%20más%20acerca%20del%20servicio%20que%20ofrecen"
+                    target="_blank"
+                  >
+                    ¡Hablemos!
+                  </a>
                 </button>
               </div>
             </div>
@@ -2051,6 +2058,16 @@
               >
                 Testimonios
               </span>
+              <button
+                  class="inline-block rounded-md border border-transparent bg-secondary px-7 py-3 text-base font-medium text-white transition hover:bg-[#0BB489]"
+                >
+                  <a
+                    href="https://wa.me/1535742787?text=Hola%20buenas,%20quiero%20saber%20más%20acerca%20del%20servicio%20que%20ofrecen"
+                    target="_blank"
+                  >
+                    ¡Hablemos!
+                  </a>
+                </button>
               <h2
                 class="mb-3 text-3xl font-bold leading-[1.2] text-dark dark:text-white sm:text-4xl md:text-[40px]"
               >
@@ -4712,11 +4729,6 @@
             spaceBetween: 30,
           },
         },
-      });
-    </script>
-    <script>
-      document.getElementById("whatsappButton").addEventListener("click", function() {
-        window.location.href = "https://wa.me/1535742787?text=Hola%20buenas,%20quiero%20saber%20más%20acerca%20del%20servicio%20que%20ofrecen";
       });
     </script>
   </body>
