--- a/index.html
+++ b/index.html
@@ -1932,7 +1932,7 @@
 
     <!-- ====== CTA Section Start -->
     <section
-      class="relative z-10 overflow-hidden bg-gradient-to-r from-primary to-blue-500 py-20 lg:py-[115px]"
+      class="overflow-hidden bg-gradient-to-r from-primary to-blue-500 py-20 lg:py-[115px]"
     >
       <div class="container mx-auto">
         <div class="relative overflow-hidden">
