--- a/index.html
+++ b/index.html
@@ -4303,7 +4303,7 @@
               </h4>
               <div class="flex flex-col gap-8">
                 <a
-                  href="blog-details.html"
+                  href=""
                   class="group flex items-center gap-[22px]"
                 >
                   <div class="overflow-hidden rounded">
@@ -4320,7 +4320,7 @@
                   </span>
                 </a>
                 <a
-                  href="blog-details.html"
+                  href=""
                   class="group flex items-center gap-[22px]"
                 >
                   <div class="overflow-hidden rounded">
