--- a/index.html
+++ b/index.html
@@ -1932,7 +1932,7 @@
 
     <!-- ====== CTA Section Start -->
     <section
-      class="overflow-hidden bg-gradient-to-r from-primary to-blue-500 py-20 lg:py-[115px]"
+      class="z-10 relative overflow-hidden bg-gradient-to-r from-primary to-blue-500 py-20 lg:py-[115px]"
     >
       <div class="container mx-auto">
         <div class="relative overflow-hidden">
@@ -1962,7 +1962,7 @@
                   diferentes escenarios.
                 </p>
                 <button
-                  class="inline-block rounded-md border border-transparent bg-secondary px-7 py-3 text-base font-medium text-white transition hover:bg-[#0BB489]"
+                  class="z-12 inline-block rounded-md border border-transparent bg-secondary px-7 py-3 text-base font-medium text-white transition hover:bg-[#0BB489]"
                 >
                   <a
                     href="https://wa.me/1535742787?text=Hola%20buenas,%20quiero%20saber%20más%20acerca%20del%20servicio%20que%20ofrecen"
@@ -3920,7 +3920,7 @@
                 <span
                   class="mb-6 block text-base font-medium text-dark dark:text-white"
                 >
-                  CONTÁCTANOS
+                  ESCRIBINOS
                 </span>
                 <h2
                   class="max-w-[260px] text-[35px] font-semibold leading-[1.14] text-dark dark:text-white"
@@ -4654,6 +4654,7 @@
     <script>
       // ==== for menu scroll
       const pageLink = document.querySelectorAll(".ud-menu-scroll");
+      
 
       pageLink.forEach((elem) => {
         elem.addEventListener("click", (e) => {
