update testimonials section

--- a/index.html
+++ b/index.html
@@ -2045,7 +2045,7 @@
     <!-- ====== CTA Section End -->
 
     <!-- ====== Testimonial Section Start -->
-    <section
+    <!-- <section
       id="testimonials"
       class="overflow-hidden bg-gray-1 py-20 dark:bg-dark-2 md:py-[120px]"
     >
@@ -2449,7 +2449,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- ====== Testimonial Section End -->
 
     <!-- ====== FAQ Section Start -->
