--- a/index.html
+++ b/index.html
@@ -1575,9 +1575,8 @@
               </h2>
               <p class="text-base text-body-color dark:text-dark-6">
                 Desarrollamos tableros de control (Dashboard) a medida.
-                Analizando y parametrizando los datos para obtener información
-                de tu empresa. Que te permitirá tomar decisiones y conocer hacia
-                donde va tu negocio.
+                Analizando y parametrizando los datos de tu empresa. Que te
+                permitirá tomar decisiones y conocer hacia donde va tu negocio.
               </p>
             </div>
           </div>
@@ -1615,7 +1614,7 @@
                 Agrupamos todos los datos relevantes para tu negocio en un único
                 modelo, de diversas fuentes y formatos. Realizamos el proceso de
                 extracción, limpieza y transformación de los datos, para que
-                puedas realizar análisis potentes y completos.
+                puedas realizar análisis sólidos y completos.
               </p>
             </div>
           </div>
@@ -1648,10 +1647,10 @@
                 Cálculo de indicadores
               </h4>
               <p class="mb-8 text-body-color dark:text-dark-6 lg:mb-9">
-                Trabajaremos juntos en la construcción de los mejores
-                indicadores para monitorear el estado y evolución de tu negocio.
-                Aquellos indicadores que te daran el mejor control para la toma
-                de decisiones de manera ágil.
+                Trabajamos juntos en la construcción de los mejores indicadores
+                para monitorear el estado y evolución de tu negocio. Aquellos
+                indicadores que te darán el mejor control para la toma de
+                decisiones de manera ágil.
               </p>
             </div>
           </div>
@@ -1684,9 +1683,9 @@
                 Diseño de visualización
               </h4>
               <p class="mb-8 text-body-color dark:text-dark-6 lg:mb-9">
-                "Una imagen vale más que mil palabras", pensamos que visualizar
+                "Una imagen vale más que mil palabras". Pensamos que visualizar
                 de manera práctica el estado de los principales indicadores te
-                permitira tomar las decisiones correctivas, preventivas y y
+                permitirá tomar las decisiones correctivas, preventivas y
                 predictivas.
               </p>
             </div>
@@ -1946,17 +1945,17 @@
                     Implementamos gestión por indicadores en tu empresa
                   </span>
                   <span class="text-3xl font-normal md:text-[40px]">
-                    Analisis en tiempo real, gestión preventiva y gestión
+                    Análisis en tiempo real, gestión preventiva y gestión
                     predictiva.
                   </span>
                 </h2>
                 <p
                   class="mx-auto mb-6 max-w-[515px] text-base leading-[1.5] text-white"
                 >
-                  Tener un tablero de control te permitira dar seguimiento a los
+                  Tener un tablero de control te permitirá dar seguimiento a los
                   principales indicadores de tu negocio. Obtener insight para la
                   toma de decisiones. Mediante un tablero de control podrás
-                  decidir, controlar, señalar, y entender a traves de los datos.
+                  decidir, controlar, señalar, y entender a través de los datos.
                   En consecuencia, monitorear la performance, disminuir la
                   incertidumbre, analizar riesgos y oportunidades y evaluar
                   diferentes escenarios.
@@ -2552,7 +2551,7 @@
                   Seleccionar la herramienta que mejor se adapte a las
                   necesidades de tu empresa. Es importante realizar el análisis
                   de datos y tomar decisiones informadas basadas en los
-                  resultados obtenidos.
+                  resultados obtenidos, monitorear y evaluar los resultados.
                 </p>
               </div>
             </div>
@@ -2625,8 +2624,8 @@
                 </h3>
                 <p class="text-base text-body-color dark:text-dark-6">
                   El primer paso es que nos puedas contactar por medio de
-                  nuestro formulario de contacto, o bien por medio de nuestro
-                  correo electrónico.Tambien por medio de nuestro
+                  nuestro formulario de contacto, o de manera directa por medio
+                  de nuestro
                   <a
                     href="https://wa.me/1535742787?text=Hola%20buenas,%20quiero%20saber%20más%20acerca%20del%20servicio%20que%20ofrecen"
                     target="_blank"
@@ -2636,7 +2635,7 @@
                   </a>
                   Nosotros nos pondremos en contacto contigo para coordinar una
                   reunión y poder entender tus necesidades y poder brindarte un
-                  presupuesto acorde a tus necesidades.
+                  presupuesto acorde a tus requerimientos.
                 </p>
               </div>
             </div>
@@ -2672,7 +2671,9 @@
                   Las capacitaciones se realizan de manera presencial o virtual,
                   dependiendo de las necesidades de tu empresa. Nosotros nos
                   adaptamos a tus necesidades y te brindamos la mejor solución
-                  para que puedas capacitar a tu equipo de trabajo.
+                  para que puedas capacitar a tu equipo de trabajo. Nos
+                  focalizamos en la interacción y a práctica para garantizar un
+                  aprendizaje efectivo.
                 </p>
               </div>
             </div>
@@ -2704,12 +2705,12 @@
                   ¿Cómo es el servicio de mantenimiento?
                 </h3>
                 <p class="text-base text-body-color dark:text-dark-6">
-                  Hacemos relevamiento de la situación actual de tu empresa,
+                  Hacemos un relevamiento de la situación actual de tu empresa,
                   para poder brindarte un servicio de mantenimiento acorde a tus
-                  necesidades. E funcion de la situación actual de tu empresa,
+                  necesidades. En función de la situación actual de tu empresa,
                   te brindamos un servicio de mantenimiento para realizar las
-                  modificaciones necesarias para que el anánlisis de datos sea
-                  efectivo.
+                  modificaciones y requerimientos necesarios para que el análisis de datos sea
+                  efectivo, garantizando la continuidad y el buen funcionamiento del proceso.
                 </p>
               </div>
             </div>
@@ -3321,11 +3322,11 @@
                 Equipo de desarrollo
               </h2>
               <p class="text-base text-body-color dark:text-dark-6">
-                Somos profesionales con amplia experiencia en implementación de
+                Somos profesionales con experiencia en implementación de
                 dashboard con indicadores de gestión, procesos empresariales y
                 transformación cultural y digital. Con experiencia en diversas
-                áreas, y con la pasion por la mejora de procesos de negocios con
-                foco en la colaboracion.
+                áreas, y con la pasión por la mejora de procesos de negocios con
+                foco en la colaboración.
               </p>
             </div>
           </div>
@@ -3841,7 +3842,7 @@
                 <span
                   class="mb-6 inline-block rounded-[5px] bg-gradient-to-r from-primary to-blue-500 px-4 py-0.5 text-center text-xs font-medium leading-loose text-white"
                 >
-                  Mar 15, 2023
+                  Feb 20, 2024
                 </span>
                 <h3>
                   <a
@@ -3878,7 +3879,7 @@
                 <span
                   class="mb-6 inline-block rounded-[5px] bg-gradient-to-r from-primary to-blue-500 px-4 py-0.5 text-center text-xs font-medium leading-loose text-white"
                 >
-                  Jan 05, 2023
+                  Mar 1, 2024
                 </span>
                 <h3>
                   <a
@@ -3925,7 +3926,7 @@
                 <h2
                   class="max-w-[260px] text-[35px] font-semibold leading-[1.14] text-dark dark:text-white"
                 >
-                  Contános tu idea, y veamos como podemos ayudarte
+                  Contános tu idea, y te proponemos cómo podemos ayudarte
                 </h2>
               </div>
               <div class="mb-12 flex flex-wrap justify-between lg:mb-0">
@@ -3996,7 +3997,7 @@
               <h3
                 class="mb-8 text-2xl font-semibold text-dark dark:text-white md:text-[28px] md:leading-[1.42]"
               >
-                Envianos un mensaje
+                Envíanos un mensaje
               </h3>
               <form>
                 <div class="mb-[22px]">
@@ -4302,10 +4303,7 @@
                 Últimas notas
               </h4>
               <div class="flex flex-col gap-8">
-                <a
-                  href=""
-                  class="group flex items-center gap-[22px]"
-                >
+                <a href="" class="group flex items-center gap-[22px]">
                   <div class="overflow-hidden rounded">
                     <img
                       src="./assets/images/blog/blog-footer-01.jpg"
@@ -4319,10 +4317,7 @@
                     Estratégicas
                   </span>
                 </a>
-                <a
-                  href=""
-                  class="group flex items-center gap-[22px]"
-                >
+                <a href="" class="group flex items-center gap-[22px]">
                   <div class="overflow-hidden rounded">
                     <img
                       src="./assets/images/blog/blog-footer-02.jpg"
@@ -4654,7 +4649,6 @@
     <script>
       // ==== for menu scroll
       const pageLink = document.querySelectorAll(".ud-menu-scroll");
-      
 
       pageLink.forEach((elem) => {
         elem.addEventListener("click", (e) => {
