--- a/index.html
+++ b/index.html
@@ -2633,7 +2633,7 @@
                   >
                     Whatsapp
                   </a>
-                  Nosotros nos pondremos en contacto contigo para coordinar una
+                  , nosotros nos pondremos en contacto contigo para coordinar una
                   reunión y poder entender tus necesidades y poder brindarte un
                   presupuesto acorde a tus requerimientos.
                 </p>
@@ -2672,7 +2672,7 @@
                   dependiendo de las necesidades de tu empresa. Nosotros nos
                   adaptamos a tus necesidades y te brindamos la mejor solución
                   para que puedas capacitar a tu equipo de trabajo. Nos
-                  focalizamos en la interacción y a práctica para garantizar un
+                  focalizamos en la interacción y la práctica para garantizar un
                   aprendizaje efectivo.
                 </p>
               </div>
@@ -4351,7 +4351,7 @@
                     href="javascript:void(0)"
                     class="px-3 text-base text-gray-7 hover:text-white hover:underline"
                   >
-                    © 2024 GB Data. Todos los derechos reservados.
+                    © 2024 G&B Data. Todos los derechos reservados.
                   </a>
                 </div>
               </div>
