--- a/index.html
+++ b/index.html
@@ -1964,7 +1964,7 @@
                   diferentes escenarios.
                 </p>
                 <a
-                  class="z-12 inline-block rounded-md border border-transparent bg-secondary px-7 py-3 text-base font-medium text-white transition hover:bg-[#0BB489]"
+                  class="-z-10 inline-block rounded-md border border-transparent bg-secondary px-7 py-3 text-base font-medium text-white transition hover:bg-[#0BB489]"
                   href="https://wa.me/1535742787?text=Hola%20buenas,%20quiero%20saber%20más%20acerca%20del%20servicio%20que%20ofrecen"
                   target="_blank"
                 >
